--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
+                        <h3>Melon Squash</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
                         <a href="#" class="btn">add to cart</a>
                         <span class="pice">Rp.20.000</span>
@@ -155,7 +155,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
+                        <h3>Lemon Squash</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
                         <a href="#" class="btn">add to cart</a>
                         <span class="pice">Rp.20.000</span>
@@ -174,7 +174,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
+                        <h3>Kopi</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
                         <a href="#" class="btn">add to cart</a>
                         <span class="pice">Rp.10.000</span>
@@ -193,7 +193,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
+                        <h3>Indomie Goreng</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
                         <a href="#" class="btn">add to cart</a>
                         <span class="pice">Rp.15.000</span>
@@ -212,7 +212,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
+                        <h3>Teh</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
                         <a href="#" class="btn">add to cart</a>
                         <span class="pice">Rp.10.000</span>
@@ -231,7 +231,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
+                        <h3>Kentang Goreng</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
                         <a href="#" class="btn">add to cart</a>
                         <span class="pice">Rp.15.000</span>
@@ -250,7 +250,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
+                        <h3>Cappucino</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
                         <a href="#" class="btn">add to cart</a>
                         <span class="pice">Rp.15.000</span>
@@ -269,7 +269,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
+                        <h3>Milo</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
                         <a href="#" class="btn">add to cart</a>
                         <span class="pice">Rp.15.000</span>
@@ -289,7 +289,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
+                        <h3>Nasi Goreng</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
                         <a href="#" class="btn">add to cart</a>
                         <span class="pice">Rp.25.000</span>
@@ -297,10 +297,6 @@
                 </div>
             </div>
         </section>
-
-
-
-
 
         <!--order section start-->
         <section class="order" id="order">
