--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <title>Merambu Foothils</title>
+    <body bgcolor="pink">
+    </body>
 </head>
 
 <body>
@@ -46,9 +48,8 @@
                         <div class="content">
                             <span>Merambu Foothils</span>
                             <h3>makanan enak </h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur impedit debitis
-                                libero.</p>
-                            <a href="#" class="btn">Order now</a>
+                            <p>Memberikan cita rasa makanan yang enak dan berkesan.
+                                </p>
                         </div>
                         <div class="images">
                             <img src="./images/1.jpg">
@@ -58,9 +59,9 @@
                         <div class="content">
                             <span>Merambu Foothils</span>
                             <h3>Tempat yang Aesthetic </h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur impedit debitis
-                                libero.</p>
-                            <a href="#" class="btn">Order now</a>
+                            <p>Memperlihatkan Pemandangan alam dan keindahan alam yang dapat dipersepsikan
+                             melalui komponen mata dalam pancaindra manusia.
+                                </p>
                         </div>
                         <div class="images">
                             <img src="./images/2.jpg">
@@ -70,9 +71,14 @@
                         <div class="content">
                             <span>Merambu Foothils</span>
                             <h3>Pelayanan yang Baik </h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur impedit debitis
-                                libero.</p>
-                            <a href="#" class="btn">Order now</a>
+                            <p>Sambutan yang ramah: Sambut pelanggan dengan baik dan salam yang khas. 
+                                Menemukan tempat duduk: Bantu pelanggan menemukan tempat duduk yang kosong. 
+                                Memberikan menu: Berikan daftar menu dan informasikan bahwa Anda siap membantu 
+                                jika ada pertanyaan. 
+                                Mencatat pesanan: Catat pesanan pelanggan dengan akurat dan ulangi
+                                pesanan untuk menghindari kesalahan. 
+                                Hidangkan pesanan: Sajikan makanan dengan baik dan rapi.
+                             </p>
                         </div>
                         <div class="images">
                             <img src="./images/3.jpg">
@@ -91,28 +97,13 @@
                     <img src="./images/4.jpg">
                 </div>
                 <div class="content">
-                    <h3>best food in the country</h3>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis tempora ad quisquam pariatur
-                        cumque facere aut! Nostrum asperiores dolorum repudiandae beatae pariatur, id optio consequatur
-                        eaque nam. Minus, sapiente est?</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio accusamus beatae quisquam possimus,
-                        aspernatur natus expedita voluptatum. Pariatur, qui libero.</p>
-                    <div class="icon-container">
-                        <div class="icons">
-                            <i class="fas fa-shipping-fast"></i>
-                            <span>free delivry</span>
-                        </div>
-
-                        <div class="icons">
-                            <i class="fas fa-dollar-sign"></i>
-                            <span>free delivry</span>
-                        </div>
-
-                        <div class="icons">
-                            <i class="fas fa-headset"></i>
-                            <span> 24/7 service</span>
-                        </div>
-                        <a href="#" class="btn">read more</a>
+                    <h3>best food in the Merambu Foothills</h3>
+                    <p> 
+                        ayam lalapan
+                        Ayam lalapan adalah hidangan yang terdiri dari ayam dan lalapan, yaitu sayuran mentah yang disajikan bersama-sama. Lalapan merupakan hidangan tradisional Indonesia yang biasanya disajikan sebagai pelengkap makanan utama.
+                        </p>
+                    <p>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -136,9 +127,8 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
-                        <a href="#" class="btn">add to cart</a>
+                        <h3>Melon Squash</h3>
+                        <p>Melon Squash adalah minuman segar yang terbuat dari sirup melon.</p>
                         <span class="pice">Rp.20.000</span>
                     </div>
                 </div>
@@ -155,9 +145,9 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
-                        <a href="#" class="btn">add to cart</a>
+                        <h3>Lemon Squash</h3>
+                        <p>Lemon & Orange Squash merupakan minuman berbahan dasar lemon dan jeruk orange
+                         yang dipadukan bersama soda serta es batu yang menyegarkan tenggorokan..</p>
                         <span class="pice">Rp.20.000</span>
                     </div>
                 </div>
@@ -174,9 +164,9 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
-                        <a href="#" class="btn">add to cart</a>
+                        <h3>Kopi</h3>
+                        <p>Kopi hitam adalah jenis minuman yang terbuat dari biji kopi, 
+                        lalu dipanggang dan dihaluskan tanpa ditambahkan susu, krim, atau pemanis lainnya.</p>
                         <span class="pice">Rp.10.000</span>
                     </div>
                 </div>
@@ -193,9 +183,9 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
-                        <a href="#" class="btn">add to cart</a>
+                        <h3>Indomie Goreng</h3>
+                        <p>Indomie Mi Goreng merupakan mie instan tanpa kuah yang sejenis dengan
+                            mie goreng tradisional yang dapat ditemui di warung tradisional. </p>
                         <span class="pice">Rp.15.000</span>
                     </div>
                 </div>
@@ -212,9 +202,8 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
-                        <a href="#" class="btn">add to cart</a>
+                        <h3>Teh</h3>
+                        <p>Teh adalah sejenis minuman yang di hasilkan dari pengolahan daun tanaman teh (Camellia sinensis). </p>
                         <span class="pice">Rp.10.000</span>
                     </div>
                 </div>
@@ -231,9 +220,9 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
-                        <a href="#" class="btn">add to cart</a>
+                        <h3>Kentang Goreng</h3>
+                        <p>Kentang goreng adalah hidangan yang dibuat dari potongan-potongan 
+                        kentang yang digoreng dalam minyak goreng panas. </p>
                         <span class="pice">Rp.15.000</span>
                     </div>
                 </div>
@@ -250,9 +239,9 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
-                        <a href="#" class="btn">add to cart</a>
+                        <h3>Cappucino</h3>
+                        <p>Cappuccino adalah minuman kopi susu yang berasal dari Italia dan memiliki
+                         perbandingan espresso, susu panas, dan busa yang sama</p>
                         <span class="pice">Rp.15.000</span>
                     </div>
                 </div>
@@ -269,9 +258,9 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
-                        <a href="#" class="btn">add to cart</a>
+                        <h3>Milo</h3>
+                        <p>Milo merupakan minuman energi yang mengandung nutrisi penting seperti karbohidrat,
+                         lemak, vitamin, kalsium, dan mineral. </p>
                         <span class="pice">Rp.15.000</span>
                     </div>
                 </div>
@@ -289,9 +278,9 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
-                        <a href="#" class="btn">add to cart</a>
+                        <h3>Nasi Goreng</h3>
+                        <p>Nasi goreng adalah makanan berupa nasi yang digoreng dan 
+                        dicampur dalam minyak goreng, margarin, atau mentega. </p>
                         <span class="pice">Rp.25.000</span>
                     </div>
                 </div>
@@ -299,65 +288,28 @@
         </section>
 
 
-
-
-
-        <!--order section start-->
-        <section class="order" id="order">
-            <h3 class="sub-heading">order now</h3>
-            <h1 class="heading">free and fast</h1>
-            <form action="">
-                <div class="inputBox">
-
-                    <div class="input">
-                        <span>first name</span>
-                        <input type="text" name="first_name" placeholder="enter your first name">
-                    </div>
-                    <div class="input">
-                        <span>email</span>
-                        <input type="email" name="email" placeholder="enter your email">
-                    </div>
-                    <div class="input">
-                        <span>last name</span>
-                        <input type="text" name="last_name" placeholder="enter your last name">
-                    </div>
-                    <div class="input">
-                        <span>password</span>
-                        <input type="password" name="password" placeholder="enter your password">
-                    </div>
-                </div>
-
-                <div class="inputBox">
-                    <div class="input">
-                        <span>phone</span>
-                        <input type="number" name="phone" placeholder="enter your number">
-                    </div>
-
-                </div>
-                <input type="submit" value="order now" class="btn">
-            </form>
-        </section>
-    </main>
     <!--footer section start-->
     <footer class="footer" id="footer">
         <div class="box-container">
             <div class="box">
                 <h3>location</h3>
-                <a href="#">Toraja</a>
+                <a href="#">Toraja Utara,
+                    Kecamatan Tikala</a>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3984.529527205967!2d119.87304927497043!3d-2.950443797025775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMsKwNTcnMDEuNiJTIDExOcKwNTInMzIuMyJF!5e0!3m2!1sen!2sid!4v1730859548247!5m2!1sen!2sid" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+            <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="box">
                 <h3>contact info</h3>
-                <a href="#">01552242010</a>
-                <a href="#">01102578349</a>
-                <a href="#">marambufootils@gmail.com</a>
+                <a href="#">085299739200</a>
+                <a href="#">081356369841</a>
+                <a href="#">nadhiachesya15@gmail.com</a>
                 <a href="#">Toraja, Sulawesi Selatan</a>
             </div>
             <div class="box">
                 <h3>follow us</h3>
-                <a href="#">facebook</a>
-                <a href="#">twitter</a>
-                <a href="#">instagram</a>
-                <a href="#">linkedin</a>
+                <a href="#">facebook Mumut Ryel's</a>
+                <a href="#">instagram Merambu_foothills</a>
             </div>
         </div>
         <div class="credit"> made in 2024 by <span>web developer</span> </div>
