--- a/index.html
+++ b/index.html
@@ -127,9 +127,8 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
-                        <a href="#" class="btn">add to cart</a>
+                        <h3>Melon Squash</h3>
+                        <p>Melon Squash adalah minuman segar yang terbuat dari sirup melon.</p>
                         <span class="pice">Rp.20.000</span>
                     </div>
                 </div>
@@ -146,9 +145,9 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
-                        <a href="#" class="btn">add to cart</a>
+                        <h3>Lemon Squash</h3>
+                        <p>Lemon & Orange Squash merupakan minuman berbahan dasar lemon dan jeruk orange
+                         yang dipadukan bersama soda serta es batu yang menyegarkan tenggorokan..</p>
                         <span class="pice">Rp.20.000</span>
                     </div>
                 </div>
@@ -165,9 +164,9 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
-                        <a href="#" class="btn">add to cart</a>
+                        <h3>Kopi</h3>
+                        <p>Kopi hitam adalah jenis minuman yang terbuat dari biji kopi, 
+                        lalu dipanggang dan dihaluskan tanpa ditambahkan susu, krim, atau pemanis lainnya.</p>
                         <span class="pice">Rp.10.000</span>
                     </div>
                 </div>
@@ -184,9 +183,9 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
-                        <a href="#" class="btn">add to cart</a>
+                        <h3>Indomie Goreng</h3>
+                        <p>Indomie Mi Goreng merupakan mie instan tanpa kuah yang sejenis dengan
+                            mie goreng tradisional yang dapat ditemui di warung tradisional. </p>
                         <span class="pice">Rp.15.000</span>
                     </div>
                 </div>
@@ -203,9 +202,8 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
-                        <a href="#" class="btn">add to cart</a>
+                        <h3>Teh</h3>
+                        <p>Teh adalah sejenis minuman yang di hasilkan dari pengolahan daun tanaman teh (Camellia sinensis). </p>
                         <span class="pice">Rp.10.000</span>
                     </div>
                 </div>
@@ -222,9 +220,9 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
-                        <a href="#" class="btn">add to cart</a>
+                        <h3>Kentang Goreng</h3>
+                        <p>Kentang goreng adalah hidangan yang dibuat dari potongan-potongan 
+                        kentang yang digoreng dalam minyak goreng panas. </p>
                         <span class="pice">Rp.15.000</span>
                     </div>
                 </div>
@@ -241,9 +239,9 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
-                        <a href="#" class="btn">add to cart</a>
+                        <h3>Cappucino</h3>
+                        <p>Cappuccino adalah minuman kopi susu yang berasal dari Italia dan memiliki
+                         perbandingan espresso, susu panas, dan busa yang sama</p>
                         <span class="pice">Rp.15.000</span>
                     </div>
                 </div>
@@ -260,9 +258,9 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
-                        <a href="#" class="btn">add to cart</a>
+                        <h3>Milo</h3>
+                        <p>Milo merupakan minuman energi yang mengandung nutrisi penting seperti karbohidrat,
+                         lemak, vitamin, kalsium, dan mineral. </p>
                         <span class="pice">Rp.15.000</span>
                     </div>
                 </div>
@@ -280,9 +278,9 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star-half-alt"></i>
                         </div>
-                        <h3>delicius food</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, voluptatem.</p>
-                        <a href="#" class="btn">add to cart</a>
+                        <h3>Nasi Goreng</h3>
+                        <p>Nasi goreng adalah makanan berupa nasi yang digoreng dan 
+                        dicampur dalam minyak goreng, margarin, atau mentega. </p>
                         <span class="pice">Rp.25.000</span>
                     </div>
                 </div>
@@ -290,45 +288,6 @@
         </section>
 
 
-
-
-
-        <!--order section start-->
-        <section class="order" id="order">
-            <h3 class="sub-heading">order now</h3>
-            <h1 class="heading">free and fast</h1>
-            <form action="">
-                <div class="inputBox">
-
-                    <div class="input">
-                        <span>first name</span>
-                        <input type="text" name="first_name" placeholder="enter your first name">
-                    </div>
-                    <div class="input">
-                        <span>email</span>
-                        <input type="email" name="email" placeholder="enter your email">
-                    </div>
-                    <div class="input">
-                        <span>last name</span>
-                        <input type="text" name="last_name" placeholder="enter your last name">
-                    </div>
-                    <div class="input">
-                        <span>password</span>
-                        <input type="password" name="password" placeholder="enter your password">
-                    </div>
-                </div>
-
-                <div class="inputBox">
-                    <div class="input">
-                        <span>phone</span>
-                        <input type="number" name="phone" placeholder="enter your number">
-                    </div>
-
-                </div>
-                <input type="submit" value="order now" class="btn">
-            </form>
-        </section>
-    </main>
     <!--footer section start-->
     <footer class="footer" id="footer">
         <div class="box-container">
